--- a/app/src/main/res/layout/adalsmlsknsdvsdv.xml
+++ b/app/src/main/res/layout/adalsmlsknsdvsdv.xml
@@ -94,18 +94,21 @@
 
 
         </LinearLayout>
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1.5">
             <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="10dp"
-                android:src="@drawable/user_image"
-                android:id="@+id/imageviewuserVirayesh"/>
-        </LinearLayout>
+                android:layout_width="77dp"
+                android:layout_height="77dp"
+                android:id="@+id/imageviewuserVirayesh"
+                android:layout_centerInParent="true"/>
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="89dp"
+                android:layout_height="89dp"
+                android:background="@drawable/border"
+                android:layout_centerInParent="true"/>
+        </RelativeLayout>
 
     </LinearLayout>
     <LinearLayout
