--- a/app/src/main/res/layout/item_markaz.xml
+++ b/app/src/main/res/layout/item_markaz.xml
@@ -31,12 +31,22 @@
             android:id="@+id/AdviserName"
             android:gravity="right|center"/>
     </LinearLayout>
-    <de.hdodenhof.circleimageview.CircleImageView
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:id="@+id/user_img"
-        android:layout_gravity="center"
-        app:civ_border_width="3dp"
-        app:civ_border_color="#3d51a9"
-        android:layout_weight="4"/>
+        android:layout_height="match_parent"
+        android:layout_weight="4">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="77dp"
+            android:layout_height="77dp"
+            android:id="@+id/user_img"
+            android:layout_centerInParent="true"/>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="89dp"
+            android:layout_height="89dp"
+            android:background="@drawable/border"
+            android:layout_centerInParent="true"/>
+
+    </RelativeLayout>
 </LinearLayout>
