--- a/app/src/main/res/layout/itemelisense.xml
+++ b/app/src/main/res/layout/itemelisense.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/asdfghjkidghjm"
         android:layout_margin="2dp"/>
 
