--- a/app/src/main/res/layout/lay2.xml
+++ b/app/src/main/res/layout/lay2.xml
@@ -47,6 +47,7 @@
             android:id="@+id/profile_image"
             android:layout_width="69dp"
             android:layout_height="69dp"
+            android:background="@drawable/border"
             android:src="@drawable/user_image"
             app:civ_border_width="2dp"
             app:civ_border_color="#ccbbbb"/>
