--- a/app/src/main/res/layout/activity_liste_taxassosha.xml
+++ b/app/src/main/res/layout/activity_liste_taxassosha.xml
@@ -14,6 +14,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="15dp"
             android:layout_gravity="center"
             android:layout_margin="20dp"
             android:text="موضوع سوال خود را انتخاب نمایید :"/>
