--- a/app/src/main/res/layout/activity_marakez_page.xml
+++ b/app/src/main/res/layout/activity_marakez_page.xml
@@ -17,6 +17,7 @@
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
+        android:layoutDirection="rtl"
         android:layout_height="match_parent"
         android:layout_gravity="end"
         android:fitsSystemWindows="true"
