--- a/app/src/main/res/layout/activity_page_logout.xml
+++ b/app/src/main/res/layout/activity_page_logout.xml
@@ -15,6 +15,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="end"
         android:fitsSystemWindows="true"
+        android:layoutDirection="rtl"
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/activity_main_drawer" />
 
