--- a/app/src/main/res/layout/activity_page_virayesh.xml
+++ b/app/src/main/res/layout/activity_page_virayesh.xml
@@ -20,6 +20,7 @@
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layoutDirection="rtl"
         android:layout_gravity="end"
         android:fitsSystemWindows="true"
         android:visibility="gone"
