--- a/app/src/main/res/layout/item_alagemandiha.xml
+++ b/app/src/main/res/layout/item_alagemandiha.xml
@@ -21,12 +21,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
+                android:textSize="15dp"
                 android:layout_weight="1"
                 android:layout_gravity="right"
                 android:id="@+id/typeAlagemandiTextView"
                 android:text="مشاور"/>
             <TextView
                 android:layout_width="match_parent"
+                android:textSize="15dp"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:layout_gravity="left"
