--- a/app/src/main/res/layout/item_moshaverin.xml
+++ b/app/src/main/res/layout/item_moshaverin.xml
@@ -25,7 +25,7 @@
                 android:layout_margin="4dp"
                 android:padding="3dp"
                 android:textColor="#e78f02"
-                android:textSize="20dp"
+                android:textSize="17dp"
                 android:id="@+id/AdviserName"
                 android:gravity="right"/>
             <TextView
@@ -33,6 +33,7 @@
                 android:layout_height="match_parent"
                 android:layout_margin="4dp"
                 android:padding="3dp"
+                android:textSize="15dp"
                 android:id="@+id/Tag"
                 android:gravity="right"/>
             <LinearLayout
@@ -47,23 +48,31 @@
                     android:src="@drawable/yahligade"
                     android:layout_weight="8.5"/>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_weight="6"
+                    android:orientation="horizontal"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="right"
+                        android:textSize="15dp"
+                        android:gravity="right|bottom"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:id="@+id/commentinnazrioml"/>
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/arkan"
+                        android:src="@drawable/furuhe"
+                        android:layout_weight="3"/>
+                </LinearLayout>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_gravity="right"
-                    android:gravity="right"
-                    android:layout_margin="5dp"
-                    android:id="@+id/commentinnazrioml"
-                    android:layout_weight="6"/>
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/arkan"
-                    android:src="@drawable/furuhe"
-                    android:layout_weight="8.5"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:textSize="15dp"
                     android:layout_gravity="right"
                     android:gravity="right"
                     android:id="@+id/IDCommentCount"
@@ -72,6 +81,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="کد کارشناس: "
+                    android:textSize="15dp"
                     android:layout_gravity="right"
                     android:gravity="right"/>
             </LinearLayout>
