--- a/app/src/main/res/layout/item_taxassos.xml
+++ b/app/src/main/res/layout/item_taxassos.xml
@@ -48,8 +48,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text=" عنوان :"
+                        android:textSize="15dp"
                         android:layout_margin="4dp"
-                        android:padding="3dp"
                         android:layout_weight="4"
                         android:gravity="right"/>
                 </LinearLayout>
