--- a/app/src/main/res/layout/pagemenu.xml
+++ b/app/src/main/res/layout/pagemenu.xml
@@ -19,6 +19,7 @@
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layoutDirection="rtl"
         android:layout_gravity="end"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
