--- a/app/src/main/res/layout/item_markaz.xml
+++ b/app/src/main/res/layout/item_markaz.xml
@@ -9,16 +9,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
         android:layout_weight="1"
+        android:layout_marginRight="10dp"
         android:gravity="center">
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="90dp"
             android:id="@+id/item_icon"
+            android:layout_marginLeft="5dp"
             android:src="@drawable/yahligade"
-            android:layout_weight="2"/>
+            android:layout_weight="1.5"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -34,17 +35,16 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="4">
-
+        android:layout_weight="2"
+        android:layout_height="match_parent">
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="77dp"
             android:layout_height="77dp"
             android:id="@+id/user_img"
             android:layout_centerInParent="true"/>
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="89dp"
-            android:layout_height="89dp"
+            android:layout_width="88dp"
+            android:layout_height="88dp"
             android:background="@drawable/border"
             android:layout_centerInParent="true"/>
 
