--- a/app/src/main/res/layout/item_alagemandiha.xml
+++ b/app/src/main/res/layout/item_alagemandiha.xml
@@ -57,12 +57,22 @@
         </LinearLayout>
 
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="100sp"
-            android:id="@+id/user_img"
-            app:civ_border_color="#a54"
-            android:layout_weight="2.6"/>
+            android:layout_weight="2"
+            android:layout_height="match_parent">
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="77dp"
+                android:layout_height="77dp"
+                android:id="@+id/user_img"
+                android:layout_centerInParent="true"/>
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="88dp"
+                android:layout_height="88dp"
+                android:background="@drawable/border"
+                android:layout_centerInParent="true"/>
+
+        </RelativeLayout>
     </LinearLayout>
 
 </LinearLayout>
